# SPDX-License-Identifier: GPL-2.0

load("//build/kernel/kleaf:kernel.bzl", "kernel_module")

filegroup(
    name = "headers",
    srcs = [
        "exynos-hdcp-interface.h",
    ],
    visibility = [
        "//private/google-modules/display:__subpackages__",
    ],
)

kernel_module(
    name = "hdcp.samsung",
    srcs = glob([
        "**/*.c",
        "**/*.h",
        "Kbuild",
    ]) + [
        "//private/google-modules/soc/gs:gs_soc_headers",
        "//private/google-modules/trusty:headers",
    ],
    outs = [
        "exynos-hdcp2.ko",
    ],
    kernel_build = "//private/google-modules/soc/gs:gs_kernel_build",
    visibility = [
        "//private/devices/google:__subpackages__",
        "//private/google-modules/display:__subpackages__",
        "//private/google-modules/soc/gs:__pkg__",
    ],
    deps = [
        "//private/google-modules/soc/gs:gs_soc_module",
        "//private/google-modules/trusty",
    ],
)
