# SPDX-License-Identifier: GPL-2.0-or-later

load("//build/kernel/kleaf:kernel.bzl", "kernel_module")

filegroup(
    name = "reset.kconfig",
    srcs = glob([
        "Kconfig",
    ]),
    visibility = [
        "//private/devices/google:__subpackages__",
        "//private/google-modules/soc/gs:__pkg__",
    ],
)

kernel_module(
    name = "reset",
    srcs = glob([
        "**/*.c",
        "**/*.h",
        "Kbuild",
    ]) + [
        "//private/google-modules/bms/misc:headers",
        "//private/google-modules/bms:headers",
        "//private/google-modules/soc/gs:gs_soc_headers",
    ],
    outs = [
        "exynos-reboot.ko",
    ],
    kernel_build = "//private/google-modules/soc/gs:gs_kernel_build",
    visibility = [
        "//private/devices/google:__subpackages__",
        "//private/google-modules/soc/gs:__pkg__",
    ],
    deps = [
        "//private/google-modules/bms",
        "//private/google-modules/soc/gs:gs_soc_module",
    ],
)
