# SPDX-License-Identifier: GPL-2.0-or-later

load("//build/kernel/kleaf:kernel.bzl", "kernel_module")

filegroup(
    name = "ftm5.kconfig",
    srcs = glob([
        "Kconfig",
    ]),
    visibility = [
        "//private/devices/google:__subpackages__",
        "//private/google-modules/soc/gs:__pkg__",
    ],
)

kernel_module(
    name = "ftm5",
    srcs = glob([
        "**/*.c",
        "**/*.h",
        "Kbuild",
    ]) + [
        "//private/google-modules/display/samsung:headers",
        "//private/google-modules/display/samsung/include:headers",
        "//private/google-modules/soc/gs:gs_soc_headers",
        "//private/google-modules/touch/common:headers",
    ],
    outs = [
        "ftm5.ko",
    ],
    kernel_build = "//private/google-modules/soc/gs:gs_kernel_build",
    visibility = [
        "//private/devices/google:__subpackages__",
        "//private/google-modules/soc/gs:__pkg__",
    ],
    deps = [
        "//private/google-modules/touch/common:touch.common",
    ],
)
